# hackathon-completion-engine

./: .env.example  .gitignore  ARCHITECTURE.md  CONSTITUTION.md  DISCORD_INTEGRATION.md  GEMINI.md  IMPROVEMENTS_SUMMARY.md  KUBERNETES_IMPROVEMENTS.md  LICENSE  PROJECT_CONSTITUTION.md  QWEN.md  README.md  ROADMAP.md  SYSTEM_DIAGNOSTICS_REPORT.md  backend-health-improvements.yaml  discord_bot.py  discord_config.json  discord_integration.py  frontend-health-improvements.yaml  monitoring-alerts.yaml  notification-health-improvements.yaml  notification-patch.yaml  notification-pdb.yaml  notification-strategic-patch.yaml  pyproject.toml  requirements.txt  setup_discord_env.sh  setup_github.sh  test_backend_dapr_startup.py  test_dapr_integration.py  test_discord_integration.py  webhook_server.py
backend/: main.py  requirements.txt
config/: config.yaml
download/: H0-IMPLEMENTATION-BLUEPRINT.md  H0-VALIDATION-CHECKLIST.md  SPEC-H4.5-DISCORD.md  TOMORROWS-EXECUTION-SEQUENCE.md  TOMORROWS-PROMPTS.md  h4-s3-part1-kafka.md  h4-s3-part2-notification.md  h4-s3-part3-prometheus.md  h4-s4-cicd-submission.md  h4-session3-prompt.md  hackathon-series-review.md
engine/: __init__.py  config.yaml
frontend/: package.json
skills/: dashboard-updater.md
specs/: SPEC-ENGINE-CORE.md  SPEC-H0-CORE.md  SPEC-H1-CORE.md  SPEC-H1-COURSE-COMPANION.md  SPEC-H2-CORE.md  SPEC-H2-TODO-SPEC-DRIVEN.md  SPEC-H3-ADVANCED-TODO.md  SPEC-H3-CORE.md  SPEC-H4-CLOUD-DEPLOYMENT.md  SPEC-H4-CORE.md
tests/: conftest.py  test_chat_endpoint.py  test_constitutional_rules.py  test_hitl_workflow.py
(+331 files in other folders)
